tests/ui/read-write/embed_multiple_fields.stderr
error: fixcol-derive error: Embed param is only valid on variants with exactly one field
  --> tests/ui/embed_multiple_fields.rs:21:10
   |
21 |     Point(Point, u16),
   |          ^^^^^^^^^^^^
